# data-cleaner

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml  lint.yaml  lint_and_test.yaml
notebooks/: experiments.ipynb
src/loaders/: data_loader.py  loader_factory.py  local_loader.py
src/parsers/: csv_parser.py  data_parser.py  parser_factory.py
src/preprocessor/: data_preprocessor.py
test/integration/: test_data_loader_integration.py  test_data_preprocessor_integration.py  test_loader_factory_integration.py  test_parser_factory_integration.py
test/unit/: test_csv_parser.py  test_data_preprocessor.py  test_local_loader.py  test_parser_factory.py
