[project]
name = "data-cleaner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = [
    "test"
]
pythonpath = "."